<resources>
    <string name="app_name">EMIAdda</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- ContentDescriptions -->
    <string name="cd_product_image">This is product image</string>

    <!--Product List activity-->
    <string name="buy_now_text">BUY NOW :</string>
    <string name="save_text">SAVE :</string>

    <string name="history">History</string>
    <string name="category">Category</string>
    <string name="logout">Logout</string>
    <string name="shopping_cart">Shopping Cart</string>

    <string name="electronics">ELECTRONICS</string>
    <string name="home">HOME</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="kids">KIDS</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="track_order">TRACK MY ORDER</string>
    <string name="policies">POLICIES</string>
    <string name="home_living">HOME AND LIVING</string>
    <string name="my_wish_list">MY WISH LIST</string>

    <string name="search_hint">Search categories, products &amp; more&#8230;</string>
    <string name="no_result">NO RESULTS FOUND</string>

    <string name="font_monteserrat_regular">fonts/Montserrat-Regular.otf</string>

    <string name="no_network_toast">Please check your internet connection</string>
</resources>
