<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_men"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/men"/>
        <item
            android:id="@+id/nav_women"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/women"/>

        <item
            android:id="@+id/nav_kids"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/kids"/>

        <item
            android:id="@+id/nav_home_living"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/home_living"/>
        <item
            android:id="@+id/nav_electronics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/electronics"/>
        <item
            android:id="@+id/nav_my_wish_list"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_wish_list"/>

        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_account"/>

        <item
            android:id="@+id/nav_track_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/track_order"/>

        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/policies"/>


    </group>
</menu>
